// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/services DELETE / /:serviceId - delete service 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/services GET / /:serviceId - retrieve a service 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "1f439ff8-c55d-4423-9316-a41240c4d329": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "bufferTime": 0,
        "duration": 60,
        "id": "1f439ff8-c55d-4423-9316-a41240c4d329",
        "isDefault": false,
        "isHidden": false,
        "name": "Cleanup",
        "pmsId": null,
        "unitCost": 40,
      },
    },
  },
  "result": "1f439ff8-c55d-4423-9316-a41240c4d329",
}
`;

exports[`/api/services GET / retrieve services 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "1f439ff8-c55d-4423-9316-a41240c4d329": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "bufferTime": 0,
        "duration": 60,
        "id": "1f439ff8-c55d-4423-9316-a41240c4d329",
        "isDefault": false,
        "isHidden": false,
        "name": "Cleanup",
        "pmsId": null,
        "unitCost": 40,
      },
    },
  },
  "result": Array [
    "1f439ff8-c55d-4423-9316-a41240c4d329",
  ],
}
`;

exports[`/api/services JOIN / join practitioners 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "bufferTime": null,
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isDefault": false,
        "isHidden": false,
        "name": "Test Service",
        "pmsId": null,
        "practitioners": Array [],
        "unitCost": null,
      },
    },
  },
  "result": Array [
    "c5beec65-73a0-4b58-ba48-65986931d054",
  ],
}
`;

exports[`/api/services POST / create service 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "bufferTime": null,
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isDefault": false,
        "isHidden": false,
        "name": "Test Service",
        "pmsId": null,
        "unitCost": null,
      },
    },
  },
  "result": "c5beec65-73a0-4b58-ba48-65986931d054",
}
`;

exports[`/api/services PUT / /:serviceId - update service 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "pmsId": "12",
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "bufferTime": null,
        "duration": 4,
        "isDefault": true,
        "isHidden": false,
        "name": "Updated Test Service",
        "pmsId": null,
        "practitioners": Array [
          "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        ],
        "unitCost": null,
      },
    },
  },
  "result": Array [
    "c5beec65-73a0-4b58-ba48-65986931d054",
  ],
}
`;
